--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 // navigation bar
     implementation "com.google.android.material:material:1.5.0-beta01"
 
