Added permission for camera,and storage. Added a function to pick an image or take.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,6 @@ dependencies {
 // Getting Current Location on Android-- "FusedLocationProviderClient"
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
+    implementation 'com.zhihu.android:matisse:0.5.3-beta3'
+
 }
